--- a/rewiev.html
+++ b/rewiev.html
@@ -28,8 +28,8 @@
           <div class="d-flex justify-content-between w-100 seo_score_component ">
             <div class="seo_score_sidebar">
               <ul class="seo_score_sidebar_items d-flex flex-column ">
-                <li><a href="#sums" class="d-flex align-items-center active"><img src="assets/images/link_icon1.png"
-                      alt="">
+                <li><a href="#sums" class="d-flex align-items-center active">
+                    <img src="assets/images/link_icon1.png" alt="">
                     <span>SEO оценка</span></a>
                 </li>
                 <li><a href="#optimal" class="d-flex align-items-center"><img src="assets/images/link_icon2.png" alt="">
@@ -100,12 +100,12 @@
                   <div class="seo_score_content_progress_bottom">
                     <h3 class="btn_lists_title">Ошибки, требующие внимания</h3>
                     <ul class="btn_lists d-flex flex-wrap">
-                      <li><a href="#">Title</a></li>
-                      <li><a href="#">KeyWords</a></li>
-                      <li><a href="#">Backlinks</a></li>
-                      <li><a href="#">Frames</a></li>
-                      <li><a href="#">Тех. часть</a></li>
-                      <li><a href="#">Headings</a></li>
+                      <li><a href="#title">Title</a></li>
+                      <li><a href="#keywords">KeyWords</a></li>
+                      <li><a href="#backlinks">Backlinks</a></li>
+                      <li><a href="#frames">Frames</a></li>
+                      <li><a href="#text_chast">Тех. часть</a></li>
+                      <li><a href="#headengs">Headings</a></li>
                     </ul>
 
                   </div>
@@ -120,9 +120,9 @@
                   <div class="seo_sircle_body">
                     <h3 class="seo_sircle_title text-center">Исправить SEO ошибки</h3>
                     <p class="text-center">Примерная цена услуг по исправлению ошибок</p>
-                    <div class="price text-center">45 000₽</div>
+                    <div class="price text-center" >45 000₽</div>
                     <a href="#" class="button w-100">Заказать исправление</a>
-                    <a href="#" class="button no_bg w-100">Заказать исправление</a>
+                    <a href="#" class="button no_bg w-100">Нужна консультация</a>
                   </div>
 
                 </div>
@@ -136,7 +136,7 @@
                 </div>
                 <h3 class="section_title seo_score_block_title">Анализ поисковой оптимизации (внутренней)</h3>
                 <div class="seo_score_items d-flex flex-column">
-                  <div class="seo_score_item">
+                  <div class="seo_score_item" id="title">
                     <div class="seo_score_item_header">
                       01. Title (заголовок страницы)
                     </div>
@@ -332,10 +332,9 @@
                         <a href="#" class="content_btn align-items-center justify-content-center"> <span>Развернуть
                             текст</span><img src="assets/images/SlideUp.svg" alt=""></a>
                       </div>
-
                     </div>
                   </div>
-                  <div class="seo_score_item">
+                  <div class="seo_score_item" id="keywords">
                     <div class="seo_score_item_header">
                       03. Keywords (ключевые слова страницы)
                     </div>
@@ -391,10 +390,9 @@
                         <a href="#" class="content_btn align-items-center justify-content-center"> <span>Развернуть
                             текст</span><img src="assets/images/SlideUp.svg" alt=""></a>
                       </div>
-
                     </div>
                   </div>
-                  <div class="seo_score_item">
+                  <div class="seo_score_item" id="headengs">
                     <div class="seo_score_item_header">
                       04. Headings (SEO заголовки страницы)
                     </div>
@@ -840,7 +838,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
                   </div>
                   <div class="seo_score_item">
@@ -1724,7 +1723,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="seo_score_item">
+                  <div class="seo_score_item" id="frames">
                     <div class="seo_score_item_header">
                       18. Frames (фреймы)
                     </div>
@@ -2342,7 +2341,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
                   </div>
                   <div class="seo_score_item">
@@ -2419,7 +2419,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
 
                   </div>
@@ -2747,7 +2748,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
                   </div>
                   <div class="seo_score_item Lang">
@@ -3112,7 +3114,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
 
                   </div>
@@ -3428,7 +3431,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
                   </div>
                   <div class="seo_score_item ">
@@ -3649,7 +3653,8 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
                   </div>
                 </div>
@@ -3837,11 +3842,42 @@
                     </div>
                     <div class="seo_score_item_footer d-flex align-items-center justify-content-between">
                       <span>Вы можете заказать исправление SEO ошибки у нас</span>
-                      <a href="#" class="button no_bg">Заказать за 45 000₽</a>
+                      <a href="#" class="button no_bg"  data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать за 45 000₽</a>
                     </div>
                   </div>
                 </div>
               </div>
+              <section class="consult">
+                <div class="container">
+                  <h2 class="section_title text-center text-white">
+                    Анализ нового сайта бесплатно
+                  </h2>
+                  <form class="consult_form d-flex flex-wrap justify-content-center">
+                    <input type="text" placeholder="Адрес сайта для просмотра" class="bg-white"
+                      style="color: #2B72F4; max-width: 100%;">
+                    <button class="button no_bg d-flex align-items-center justify-content-center">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                        <path
+                          d="M9 17C13.4183 17 17 13.4183 17 9C17 4.58172 13.4183 1 9 1C4.58172 1 1 4.58172 1 9C1 13.4183 4.58172 17 9 17Z"
+                          stroke="#2B72F4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                        <path d="M19.0004 19.0004L14.6504 14.6504" stroke="#2B72F4" stroke-width="2"
+                          stroke-linecap="round" stroke-linejoin="round" />
+                      </svg>
+                      <span>Анализировать сайт </span>
+                    </button>
+                    <!-- <p class="w-100 text-center text-white">
+                      Отправляя заявку, Вы соглашаетесь с
+                      <a href="https://seo.computer/ru/policy" class="text-white">
+                        
+                        <span>
+                          Политикой Конфиденциальности
+                        </span>
+                        </a>
+                    </p> -->
+                  </form>
+                </div>
+              </section>
             </div>
 
           </div>
@@ -3849,9 +3885,9 @@
       </section>
     </main>
   </div>
-  <!-- Modal -->
+  <!-- modal -->
   <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered d-flex align-items-center  justify-content-center h-100">
       <div class="modal-content custom-modal">
         <div class="modal-body d-flex align-items-center justify-content-between">
           <!-- Rasm joyi -->
@@ -3881,7 +3917,7 @@
           <div class="img-container d-flex align-items-start">
             <!-- Rasmni o'z manzilingiz bilan almashtiring -->
             <img src="assets/images/modal_img.png" alt="Rasm" class="img-fluid" />
-            <button class="close" data-bs-dismiss="modal" aria-label="Close">
+            <button class="close" data-dismiss="modal">
               <img src="assets/images/exit.svg " alt="">
             </button>
           </div>
