--- a/analystics.html
+++ b/analystics.html
@@ -222,7 +222,8 @@
 
               <ul class="seo_price_item_bottom d-flex justify-content-between align-items-center">
                 <li><a href="#" class="link_btn ">10 000 ₽</a></li>
-                <li><a href="#" class="button" data-bs-toggle="modal" data-bs-target="#myModal">Заказать</a></li>
+                <li><a href="#" class="button" data-toggle="modal" data-target="#myModal"
+                    data-bs-toggle="modal">Заказать</a></li>
               </ul>
             </div>
           </div>
@@ -4764,7 +4765,7 @@
   </div>
   <!-- Modal -->
   <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered d-flex align-items-center  justify-content-center h-100">
       <div class="modal-content custom-modal">
         <div class="modal-body d-flex align-items-center justify-content-between">
           <!-- Rasm joyi -->
@@ -4794,7 +4795,7 @@
           <div class="img-container d-flex align-items-start">
             <!-- Rasmni o'z manzilingiz bilan almashtiring -->
             <img src="assets/images/modal_img.png" alt="Rasm" class="img-fluid" />
-            <button class="close" data-bs-dismiss="modal" aria-label="Close">
+            <button class="close" data-dismiss="modal">
               <img src="assets/images/exit.svg " alt="">
             </button>
           </div>
