--- a/rewiev.html
+++ b/rewiev.html
@@ -402,8 +402,10 @@
                     <h3 class="seo_sircle_title text-center">Исправить SEO ошибки</h3>
                     <p class="text-center">Примерная цена услуг по исправлению ошибок</p>
                     <div class="price text-center">45 000₽</div>
-                    <a href="#" class="button w-100">Заказать исправление</a>
-                    <a href="#" class="button no_bg w-100">Нужна консультация</a>
+                    <a href="#" class="button w-100" data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Заказать исправление</a>
+                    <a href="#" class="button no_bg w-100" data-toggle="modal" data-target="#myModal"
+                      data-bs-toggle="modal">Нужна консультация</a>
                   </div>
 
                 </div>
@@ -411,7 +413,7 @@
               <div class="seo_score_block" id="optimal">
                 <div class="seo_score_banner d-flex justify-content-between align-items-center">
                   <h2 class="section_title">Нужен расширенный SEO анализ?</h2>
-                  <a href="#" class="button no_bg">
+                  <a href="#" class="button no_bg" data-toggle="modal" data-target="#myModal" data-bs-toggle="modal">
                     Заказать за 10 000₽
                   </a>
                 </div>
