--- a/rewiev.html
+++ b/rewiev.html
@@ -402,9 +402,9 @@
                     <h3 class="seo_sircle_title text-center">Исправить SEO ошибки</h3>
                     <p class="text-center">Примерная цена услуг по исправлению ошибок</p>
                     <div class="price text-center">45 000₽</div>
-                    <a href="#" class="button w-100" data-toggle="modal" data-target="#myModal"
+                    <a href="#" class="button w-100" data-toggle="modal" data-target="#myModal3"
                       data-bs-toggle="modal">Заказать исправление</a>
-                    <a href="#" class="button no_bg w-100" data-toggle="modal" data-target="#myModal"
+                    <a href="#" class="button no_bg w-100" data-toggle="modal" data-target="#myModal2"
                       data-bs-toggle="modal">Нужна консультация</a>
                   </div>
 
@@ -4177,6 +4177,88 @@
           <div class="modal__contents">
             <div class="modal_top">
               <h2 class="section_title">Оставьте заявку</h2>
+              <p class="text-muted mt-1">и наш SEO специалист свяжется с Вами в ближайшее время</p>
+            </div>
+            <div class="modal__contents_inputs flex flex-wrap justify-content-between ">
+              <div class="modal__contents_input">
+                <input type="text" class="form-control" placeholder="Ваше имя" id="name" required />
+              </div>
+              <div class="modal__contents_input">
+                <input type="tel" class="form-control phone_input" placeholder="Номер телефона" id="phone" required />
+              </div>
+              <div class="modal__contents_input">
+                <input type="url" class="form-control" placeholder="Адрес Вашего сайта" id="website" required />
+              </div>
+              <button type="submit" class="button desctop">Заказать исправление</button>
+              <button type="submit" class="button mobile">Отправить</button>
+            </div>
+            <p class="policy mt-3">Оставляя заявку, вы соглашаетесь с <a
+                href="https://seo.computer/ru/policy">Политикой
+                конфиденциальности</a></p>
+          </div>
+
+          <div class="img-container d-flex align-items-start">
+            <!-- Rasmni o'z manzilingiz bilan almashtiring -->
+            <img src="assets/images/modal_img.png" alt="Rasm" class="img-fluid" />
+            <button class="close" data-dismiss="modal">
+              <img src="assets/images/exit.svg " alt="">
+            </button>
+          </div>
+          <!-- Forma -->
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="myModal2" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered d-flex align-items-center  justify-content-center h-100">
+      <div class="modal-content custom-modal">
+        <div class="modal-body d-flex align-items-center justify-content-between">
+          <!-- Rasm joyi -->
+          <div class="modal__contents">
+            <div class="modal_top">
+              <h2 class="section_title">Нужна консультация</h2>
+              <p class="text-muted mt-1">и наш SEO специалист свяжется с Вами в ближайшее время</p>
+            </div>
+            <div class="modal__contents_inputs flex flex-wrap justify-content-between ">
+              <div class="modal__contents_input">
+                <input type="text" class="form-control" placeholder="Ваше имя" id="name" required />
+              </div>
+              <div class="modal__contents_input">
+                <input type="tel" class="form-control phone_input" placeholder="Номер телефона" id="phone" required />
+              </div>
+              <div class="modal__contents_input">
+                <input type="url" class="form-control" placeholder="Адрес Вашего сайта" id="website" required />
+              </div>
+              <button type="submit" class="button desctop">Заказать исправление</button>
+              <button type="submit" class="button mobile">Отправить</button>
+            </div>
+            <p class="policy mt-3">Оставляя заявку, вы соглашаетесь с <a
+                href="https://seo.computer/ru/policy">Политикой
+                конфиденциальности</a></p>
+          </div>
+
+          <div class="img-container d-flex align-items-start">
+            <!-- Rasmni o'z manzilingiz bilan almashtiring -->
+            <img src="assets/images/modal_img.png" alt="Rasm" class="img-fluid" />
+            <button class="close" data-dismiss="modal">
+              <img src="assets/images/exit.svg " alt="">
+            </button>
+          </div>
+          <!-- Forma -->
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="myModal3" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered d-flex align-items-center  justify-content-center h-100">
+      <div class="modal-content custom-modal">
+        <div class="modal-body d-flex align-items-center justify-content-between">
+          <!-- Rasm joyi -->
+          <div class="modal__contents">
+            <div class="modal_top">
+              <h2 class="section_title">Заказать исправление</h2>
               <p class="text-muted mt-1">и наш SEO специалист свяжется с Вами в ближайшее время</p>
             </div>
             <div class="modal__contents_inputs flex flex-wrap justify-content-between ">
